# CC7515-GPU

./: .gitignore  .gitmodules  README.md
CUDA/00-vectorAdd/: README.md  vectorAdd.cu  vectorAddKernelInit.cu  vectorAddUniMem.cu
hw/hw1/: CMakeLists.txt  README.md  main.cpp
hw/hw1/src/: point.hpp  polygon.hpp  vector.hpp
hw/hw1/test/: CMakeLists.txt  test_point.cpp  test_polygon.cpp  test_vector.cpp
hw/hw2/: CMakeLists.txt  README.md  gof_cuda.cu  gof_opencl.cpp  gof_sequential.cpp
hw/hw2/config/: board00.txt  board01.txt  board02.txt
hw/hw2/include/: grid.h  grid_opencl.h  utils.hpp
hw/hw2/python/: cpu_linear.csv  cuda_linear.csv  cuda_linear_if.csv  cuda_linear_modulo.csv  cuda_linear_th.csv  opencl_linear.csv  opencl_linear_if.csv  opencl_linear_modulo.csv  opencl_linear_th.csv  stats.ipynb
hw/hw2/src/: grid.cpp  grid_opencl.cpp
hw/hw2/test/: CMakeLists.txt  test_gofSequential.cpp  test_grid.cpp
hw/hw3/: README.md  julia-dyn.py  julia.py  mandelbrot.py  requirements.txt  utils.py
hw/hw3/sdr_fract/: .julia.c.swp
hw/hw3/shaders/: julia-cos_shader.glsl  julia-exp_shader.glsl  julia_shader.glsl  mandelbrot_shader.glsl  vertex_shader.glsl
